--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,16 @@ html, body{
     background-color: black;
 }
 .cursor{
-    height: 20px;
-    width: 20px;
+    height: 40px;
+    width: 40px;
     background-color: white;
     border-radius: 50%;
+    position: absolute;
+    transition: all linear .1s;
+    mix-blend-mode: difference;
 }
 h1{
-    font-size: 10vw;
+    font-size: 8vw;
     font-weight: 900;
-
+    text-transform: uppercase;
 }
